--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -1,5 +1,60 @@
-//La barre de navigation et le BurgerMenu
+//Barre de navigation et BurgerMenu
 .navBox{
     background-color: pink;
-    height: 75px;
+    height: 60px;
+    .burgerMenu{
+    position: absolute;
+    top: 25px;
+    left: 50%;
+    translate: -50% 0 0;
+    z-index: 1;
+        .burgerBar{
+        background-color: #000;
+        width: 35px;
+        height: 2px;
+        }
+        .burgerBar:not(:last-child){
+        margin-bottom: 3px;
+        }
+    }
+    //BurgerMenu devient une croix au click
+    .burgerMenu.burgerMenuActive .burgerBar:nth-child(1) {
+    width: 30px;
+    transition: 0.5s ease-in-out;
+    transform: translateY(5px) rotate(45deg);
+    }
+    .burgerMenu.burgerMenuActive .burgerBar:nth-child(2) {
+    opacity: 0;
+    }
+    .burgerMenu.burgerMenuActive .burgerBar:nth-child(3) {
+    width: 30px;
+    transition: 0.5s ease-in-out;
+    transform: translateY(-5px) rotate(-45deg);
+    }
+    //Menu descend au click
+    .menuDown{
+    width: 100vw;
+    height: 100vh;
+    background-color: pink;
+    transform: translateY(-100%);
+    transition: 0.5s ease-in-out;
+        nav{
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            position: absolute;
+            top: 25%;
+            left: 50%;
+            translate: -50% 0 0;
+            a{
+                color: #fff;
+            }
+            
+        }
+    
+    }
+    .menuDownActive{
+        transform: translateY(0);
+    }
 }
+
