--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -1,13 +1,20 @@
 //Barre de navigation et BurgerMenu
 .navBox{
-    background-color: pink;
-    height: 60px;
+    background-color: #fff;
+    height: 70px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transition: ease-in-out 0.5s;
+    @media (min-width: 1200px){
+        height: 90px;
+    }
     .burgerMenu{
-    position: absolute;
-    top: 25px;
-    left: 50%;
-    translate: -50% 0 0;
-    z-index: 1;
+    @include absmiddle;
+    z-index: 10;
+        @media (min-width: 1200px){
+            display: none;
+        }
         .burgerBar{
         background-color: #000;
         width: 35px;
@@ -35,9 +42,12 @@
     .menuDown{
     width: 100vw;
     height: 100vh;
-    background-color: pink;
+    background-color: #faf2dd;
     transform: translateY(-100%);
     transition: 0.5s ease-in-out;
+    @media (min-width: 1200px){
+        display: none;
+    }
         nav{
             display: flex;
             flex-direction: column;
@@ -47,14 +57,40 @@
             left: 50%;
             translate: -50% 0 0;
             a{
-                color: #fff;
+                color: #721230;
+                @include menuTypo;
+            } 
+            a:not(:last-child){
+                margin-bottom: 20px;
             }
-            
         }
-    
     }
     .menuDownActive{
         transform: translateY(0);
     }
+    .menuPrincipal{
+        text-align: right;
+        @media (max-width: 1200px){
+            display: none;
+        }
+        width: 100vw;
+        nav{
+            max-width: 1350px;
+            margin: 30px auto;
+        }
+        a{
+            color:#000;
+            @include menuTypo(400, 22px);
+            
+        }
+        a:not(:last-child){
+            margin-right: 20px;
+        }  
+    }    
 }
+.slideMenu{
+    transform: translateY(-100%);
+}
+
+
 
