--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -1,9 +1,12 @@
 body{
+    overflow-x: hidden;
     margin: 70px auto 0;
     @media (min-width: 1201px){
-        margin: 120px auto 0;
+        margin: 100px auto 0;
     }
 }
+
+
 
 a{
     text-decoration: none;
