--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,33 +1,97 @@
 header{
     width: 100vw;
-
+    height: 100vh;
 }
 
 .logoBox{
     width: 100vw;
+    padding: 30px;
     background-color: #faf2dd;
     text-align: center;
     img{
-        width: 450px;
+        width: 250px;
+    }
+    .sublogo{
+        text-transform: uppercase;
+        font-size: 12px;
+        padding-top: 20px;
+        
     }
 }
+.backgroundpict{
+    background: url(../../images/PamSmiling.JPG) center/cover;
+    width: 100vw;
+    height: 50vh;
+    position: absolute;
+    top: 135px;
+    left: 0;
+    z-index: -3;
+    &::after{
+        @include whitefilter_before(0.2);
+    }  
+    @media (min-width: 1200px){
+        top: 250px;
+        
+    }
+}
+.circle{
+    width: 585px;
+    height: 585px;
+    background-color: rgb(250, 242, 221, 0.7);
+    border-radius: 50%;
+    position: absolute;
+    top: 340px;
+    left: 155px;
+    z-index: -2;
+}
+
 .teasingBox{
-    margin: 15px 10px;
-    padding: 30px 10px;
-    background-color: #faf2dd;
-    height: 450px;
-    border-radius: 20px;
-    position: relative;
-    z-index: -10;
     text-align: center;
+    width: 300px;
+    margin: 10px;
+    padding: 30px 10px;
+    position: absolute;
+    top: 100px;
+    left: 30px;
+   
     .slug{
         opacity: 0;
         transition: 0.5s ease-in-out;
-        margin-bottom: 15px;
-        @include menuTypo(400, 25px)
+        margin-bottom: 40px;
+        @include menuTypo(400, 25px);
+        text-shadow: 1px 1px #fff;
+        
     }
     .slugShow{
         opacity: 1;
     
+    }
+}
+.arrow{
+    width: 150px;
+    rotate: -40deg;
+    position: absolute;
+    top: 650px;
+    left: 100px;
+}
+.textbeforebtn{
+    position: absolute;
+    top: 775px;
+    left: 25px;
+}
+.testbtn{
+    width: 450px;
+    height: 70px;
+    background-color: $aubergine;
+    border-radius: 20px;
+    position: absolute;
+    top: 855px;
+    left: 35px;
+    
+    a{
+        @include absmiddle;
+        color: #faf2dd;
+        
+
     }
 }
