--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -41,18 +41,18 @@ header{
     border-radius: 50%;
     position: absolute;
     top: 340px;
-    left: 155px;
+    left: 120px;
     z-index: -2;
 }
 
 .teasingBox{
     text-align: center;
-    width: 300px;
+    width: 250px;
     margin: 10px;
     padding: 30px 10px;
     position: absolute;
-    top: 100px;
-    left: 30px;
+    top: 90px;
+    left: 70px;
    
     .slug{
         opacity: 0;
@@ -73,21 +73,23 @@ header{
     position: absolute;
     top: 650px;
     left: 100px;
+    z-index: -2;
 }
 .textbeforebtn{
     position: absolute;
     top: 775px;
-    left: 25px;
+    left: 15px;
+    z-index: -2;
 }
 .testbtn{
-    width: 450px;
+    width: 95%;
     height: 70px;
     background-color: $aubergine;
     border-radius: 20px;
     position: absolute;
-    top: 855px;
-    left: 35px;
-    
+    top: 835px;
+    left: 15px;
+    z-index: -2;
     a{
         @include absmiddle;
         color: #faf2dd;
