--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
