--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -3,9 +3,40 @@
     text-align: center;
     padding: 40px 50px;
     .qlqmotsboxes{
-        @include minmax (300px)
+        @include minmax (300px);
     }
     .qlqmotsbox{
         padding: 0 20px;
     }
+}
+.temoignages{
+    padding: 40px 50px;
+    text-align: center;
+    .temoignagesBoxes{
+        @include minmax (300px);
+    }
+    .temoignagesBox{
+        padding: 0 20px;
+
+    }
+}
+.rappelbtntest{
+    background: url(../../images/PamBalancoire.JPG) right/cover;
+    height: 400px;
+    background-attachment: fixed;
+    position: relative;
+    &::before{
+        content:'';
+    background-color: rgb(93, 18, 59, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    }
+}
+footer{
+    background-color: $beige;
+    height: 500px;
 }
