--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -12,3 +12,13 @@ a{
         cursor: pointer;
     }
 }
+.wrapper{
+    max-width: 1350px;
+    margin: 0 auto;
+}
+h2{
+    font-family: "Dancing Script", cursive;
+    font-size: 60px;
+    font-optical-sizing: auto;
+    margin: 15px;
+}
