--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -1,3 +1,9 @@
+
+//font menu
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+//font texte flèche
 @import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
+//font sublogoo
 @import url('https://fonts.googleapis.com/css2?family=Teachers:ital,wght@0,400..800;1,400..800&display=swap');
+//title
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
