--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -1,42 +1,119 @@
-.qlqmotsbckgrd{
+.approcheBckgrd{
     background-color: $beige;
     text-align: center;
-    padding: 40px 50px;
-    .qlqmotsboxes{
+    padding: 40px 0;
+    .approcheBoxes{
         @include minmax (300px);
     }
-    .qlqmotsbox{
-        padding: 0 20px;
+    .approcheBox{
+        padding: 0 30px;
+        // h3{
+            // span{
+            
+             // }
+        // }
     }
 }
-.temoignages{
-    padding: 40px 50px;
+.temoignagesBckgd{
+    background-color: #fff;
+    padding: 40px 0;
     text-align: center;
-    .temoignagesBoxes{
-        @include minmax (300px);
+    h2{
+        margin-bottom: 150px;
     }
-    .temoignagesBox{
-        padding: 0 20px;
+    .temoignagesBoxes{
+        @include minmax (400px);
+        justify-items: center;
+        gap: 95px;
+        @media screen and (min-width: 1200px){
+            gap: 0;
+        }
+    }
+    .temoignageBox{
+        position: relative;
+        width: 400px;
+        padding: 25px 30px;
+        border-radius: 20px;
+        img{
+            width: 125px;
+            height: 125px;
+            border: 3px solid $aubergine;
+            box-shadow: 20px 5px $beige;
+            border-radius: 50%;
+            position: absolute;
+            top: -35%;
+            left: 50%;
+            translate: -50% 0 0;
+            object-fit: cover;
+    
+
+        }
+        p{
+            color: $aubergine;
+            padding: 10px 0;
+        }
 
     }
 }
-.rappelbtntest{
-    background: url(../../images/PamBalancoire.JPG) right/cover;
+.balancoirebckgd{
+    background: url(../images/PamBalancoire.JPG) right/cover;
+    width: 100vw;
     height: 400px;
     background-attachment: fixed;
     position: relative;
     &::before{
-        content:'';
+    content:'';
     background-color: rgb(93, 18, 59, 0.5);
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-
     }
+    div{
+        width: 400px;
+        text-align: center;
+        position: absolute;
+        top: 65%;
+        left: 50%;
+        translate: -50% 0 0;
+        p{
+            color: #fff;
+            text-shadow: 1px 1px grey;
+            font-size: 24px;
+
+        }
+        @media screen and (min-width: 850px){
+            width: 600px;
+            top: 50%;
+            p{
+                font-size: 34px;
+
+            }
+            
+        }
+        @media screen and (min-width: 1200px){
+            width: 800px;
+            top: 20%;
+            left: 6%;
+            translate: -6% 0 0;
+            p{
+                font-size: 45px;
+            } 
+        }
+    } 
 }
-footer{
-    background-color: $beige;
-    height: 500px;
+.rappelbtn{
+    background-color: #fff;
+    width: 100vw;
+    height: 400px;
+    position: relative;
+    .mainbtn{
+        width: 400px;
+        height: 80px;
+        position: absolute;
+        top: 75%;
+        left: 50%;
+        translate: -50% -50% 0;
+    }
 }
