--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -3,6 +3,7 @@ header{
     height: 100vh;
     margin-bottom: -50px;
 }
+
 .logoBox{
     width: 100vw;
     padding: 30px 30px 15px;
@@ -40,12 +41,12 @@ header{
     }
 }
 .beigeCircle{
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 600px;
     border-top-left-radius: 100%;
     background-color: rgb(250, 242, 221, 0.7);
     position: absolute;
-    top: 40%;
+    top: 30%;
     right: 0;
     z-index: -2;
     @media (min-width: 850px){
@@ -86,19 +87,18 @@ header{
 
 .teasingBox{
     text-align: center;
-    width: 200px;
+    width: 250px;
     margin: 10px;
     padding: 30px 10px;
     position: absolute;
-    top: 18%;
-    right: 5%;
+    top: 26%;
+    right: 7%;
     .slug{
         opacity: 0;
         transition: 0.5s ease-in-out;
         margin-bottom: 35px;
         @include menuTypo(400, 26px);
         text-shadow: 1px 1px #fff;
-        font-size: 20px;
     }
     .slugShow{
         opacity: 1;
@@ -116,8 +116,8 @@ header{
     width: 250px;
     rotate: -55deg;
     position: absolute;
-    top: 65%;
-    left:10%;
+    top: 70%;
+    left:5%;
     @media (min-width: 850px){
         top: 68%;
         left: 2%;
@@ -135,8 +135,8 @@ header{
     text-align: center;
     width: 100px;
     position: absolute;
-    top: 67%;
-    left: 6%;
+    top: 70%;
+    left: 5%;
     rotate: -15deg;
     font-family: "Gochi Hand", cursive;
     @media (min-width: 850px){
@@ -152,7 +152,7 @@ header{
     width: 95%;
     height: 70px;
     position: absolute;
-    top: 90%;
+    bottom: 20px;
     left: 50%;
     translate: -50% 0;
     @media (min-width: 1200px){
