--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,7 +1,10 @@
 footer{
     background-color: $beige;
     height: 400px;
-    padding: 40px 0;
+    padding: 30px 0;
+    h2{
+        font-size: 45px;
+    }
 }
 .reseauxBox{
     text-align: center;
@@ -12,8 +15,8 @@ footer{
     div{
         position: relative;
         background-color: $aubergine;
-        width: 40px;
-        height: 40px;
+        width: 45px;
+        height: 45px;
         border-radius: 50%;
     }
     a:not(:last-child){
