--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -7,7 +7,7 @@
     left: 0;
     transition: ease-in-out 0.5s;
     z-index: 100;
-    @media (min-width: 1200px){
+    @media screen and (min-width: 1200px){
         height: 100px;
     }
     .burgerMenu{
@@ -60,7 +60,8 @@
             translate: -50% 0 0;
             a{
                 color: $aubergine;
-                @include menuTypo;
+                font-family: "DM Serif Display", serif;
+                font-size: 35px; 
             } 
             a:not(:last-child){
                 margin-bottom: 35px;
@@ -82,8 +83,16 @@
         }
         a{
             color:#000;
-            @include menuTypo(400, 26px);
-            margin-right: 30px; 
+            font-family: "Teachers", sans-serif;
+            font-weight: 500;
+            font-size: 24px;
+            margin-right: 30px;
+            padding-bottom: 26px;
+            transition: border-bottom 0.3s ease; 
+            &:hover{
+                color: $aubergine;
+                border-bottom: 10px solid $aubergine;   
+            }
         } 
     }    
 }
