--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -14,25 +14,32 @@
         // }
     }
 }
+.fadeIn{
+    opacity : 0;
+    transform: translateY(-20%);
+    transition: all 0.5s ease-in-out;
+  
+  }
+  .fadeIn.visible{
+    opacity : 1;
+    transform: translateY(0);
+  }
+
 .temoignagesBckgd{
     background-color: #fff;
     padding: 40px 0;
     text-align: center;
     h2{
-        margin-bottom: 150px;
+        margin-bottom: 25px;
     }
     .temoignagesBoxes{
-        @include minmax (400px);
+        @include minmax (300px);
         justify-items: center;
-        gap: 95px;
-        @media screen and (min-width: 1200px){
-            gap: 0;
-        }
     }
     .temoignageBox{
         position: relative;
         width: 400px;
-        padding: 25px 30px;
+        padding: 10px 30px;
         border-radius: 20px;
         img{
             width: 125px;
@@ -40,19 +47,12 @@
             border: 3px solid $aubergine;
             box-shadow: 20px 5px $beige;
             border-radius: 50%;
-            position: absolute;
-            top: -35%;
-            left: 50%;
-            translate: -50% 0 0;
             object-fit: cover;
-    
-
         }
         p{
             color: $aubergine;
-            padding: 10px 0;
+            
         }
-
     }
 }
 .balancoirebckgd{
@@ -71,7 +71,7 @@
     height: 100%;
     }
     div{
-        width: 400px;
+        width: 375px;
         text-align: center;
         position: absolute;
         top: 65%;
@@ -80,22 +80,20 @@
         p{
             color: #fff;
             text-shadow: 1px 1px grey;
-            font-size: 24px;
-
+            font-size: 20px;
         }
-        @media screen and (min-width: 850px){
-            width: 600px;
+        @media screen and (min-width: 820px){
+            width: 625px;
             top: 50%;
             p{
                 font-size: 34px;
-
             }
             
         }
         @media screen and (min-width: 1200px){
             width: 800px;
             top: 20%;
-            left: 6%;
+            left: 8%;
             translate: -6% 0 0;
             p{
                 font-size: 45px;
