test attachement fixed

--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -20,7 +20,7 @@ h2{
     font-family: "Dancing Script", cursive;
     font-size: 60px;
     font-optical-sizing: auto;
-    margin: 15px;
+    margin: 0 0 50px;
 }
 .homebtn{
     background-color: $aubergine;
