--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -4,6 +4,7 @@ footer{
     padding: 30px 0;
     h2{
         font-size: 45px;
+        margin: 0 0 25px;
     }
 }
 .reseauxBox{
@@ -27,4 +28,20 @@ footer{
         font-size: 25px;
         @include absmiddle;
     }
+}
+.navsBox{
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    margin: 50px 0;
+    ;
+}
+.reseauxNav{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    a{
+        margin-bottom: 5px;
+    }
+    
 }
