--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -44,13 +44,14 @@ header{
     }
 }
 .beigeCircle{
-    width: 400px;
-    height: 500px;
-    border-top-left-radius: 100%;
+    width: 550px;
+    height: 450px;
+    border-radius: 50%;
     background-color: rgb(250, 242, 221, 0.7);
     position: absolute;
-    top: 40%;
-    right: 0;
+    top: 50%;
+    left: 50%;
+    translate: -50% 0 0;
     z-index: -2;
     @media screen and (min-width: 820px){
         width: 450px;
@@ -96,8 +97,9 @@ header{
     margin: 10px;
     padding: 30px 10px;
     position: absolute;
-    top: 17%;
-    right: 3%;
+    top: 0;
+    left: 50%;
+    translate: -50% 0 0;
     .slug{
         opacity: 0;
         transition: 0.5s ease-in-out;
