--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -9,6 +9,13 @@
     }
     .approcheBox{
         padding: 15px 30px;
+        img{
+            width: 90px;
+            border: 1px solid #000;
+            border-bottom: none;
+            border-radius: 50%;
+            padding: 15px;
+        }
         // h3{
             // span{
             
@@ -69,7 +76,7 @@ transform: translateY(0);
     position: relative;
     width: 100vw;
     height: 400px;
-    background: url(../images/PamBalancoire.JPG) top/cover;
+    background: url(../images/PamBalancoire.JPG) right/cover;
     @media screen and (min-width: 1200px){
         background-attachment: fixed;
     }
