--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,8 +1,11 @@
 footer{
     background-color: $beige;
-    height: 400px;
+    height: 445px;
     padding: 30px 0;
     font-family: "Teachers", sans-serif;
+    @media screen and (min-width: 1024px){
+        height: 300px;
+    }
     h2{
         font-size: 45px;
         margin: 0 0 25px;
@@ -33,7 +36,6 @@ footer{
         @include absmiddle;
     }
 }
-
 .menuFooterNav{
     display: flex;
     flex-direction: column;
@@ -42,20 +44,29 @@ footer{
     a{
         margin-bottom: 10px;
     }  
+    @media screen and (min-width: 1024px){
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 40px;
+        a:not(:last-child){
+            margin-right: 20px;
+        }  
+
+    }
 }
 .politicsNav{
     text-align: center;
+    font-size: 14px;
     span:not(:last-child)::after{
         content: '｜';
         margin: 0 5px;
     }
 }
-.designedby{
+.createdby{
     background-color: #000;
     padding: 10px 35px;
     width: 100vw;
     color: #fff;
     text-align: right;
-    font-family: "Teachers", sans-serif;
-    
+    font-family: "Teachers", sans-serif;  
 }
