--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,4 +10,5 @@
 @import 'layout/footer';
 @import 'layout/forms';
 
-@import 'pages/home'; 
+@import 'pages/home';
+@import 'pages/versmetierideal' 
