--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -142,3 +142,9 @@ transform: translateX(0);
         translate: -50% -50% 0;
     }
 }
+
+.versmetieridealBox{
+    background-color: $aubergine;
+    height: 100vh;
+    
+}
