--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -1,7 +1,10 @@
 header{
     width: 100vw;
     height: 100vh;
-    margin-bottom: -50px;
+    margin: 70px auto -50px;
+    @media screen and (min-width: 1025px){
+        margin: 100px auto 0;
+    }
 }
 //div beige avec logo PamG Digital
 .logoBox{
