--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -1,6 +1,7 @@
 //Barre de navigation et BurgerMenu
 .navBox{
     background-color: #fff;
+    width: 100vw;
     height: 70px;
     position: fixed;
     top: 0;
@@ -13,7 +14,7 @@
     .burgerMenu{
     @include absmiddle;
     z-index: 10;
-         @media screen and (min-width: 1024px){
+         @media screen and (min-width: 1050px){
             display: none;
         }
         .burgerBar{
@@ -42,11 +43,11 @@
     //Configuration menuDown qui est caché 
     .menuDown{
     width: 100vw;
-    height: 110vh;
+    height: 115vh;
     background-color: $beige;
-    transform: translateY(-175%);
+    transform: translateY(-275%);
     transition: 0.5s ease-in-out;
-    @media screen and (min-width: 1024px){
+    @media screen and (min-width: 1050px){
         display: none;
     }
         nav{    
@@ -74,28 +75,40 @@
     }
     //menu en desktop
     .menuPrincipal{
-        text-align: right;
+        max-width: 1350px;
+        width: 100vw;
+        margin: 39px auto;
+        
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-family: "Teachers", sans-serif;
         @media screen and (max-width: 1024px){
             display: none;
         }
-        width: 100vw;
         nav{
-            max-width: 1350px;
-            margin: 37px auto;
+            a{
+                color:#000;
+                font-weight: 500;
+                font-size: 20px;
+                margin-right: 30px;
+                padding-bottom: 26px;
+                transition: border-bottom 0.3s ease; 
+                &:hover{
+                    color: $aubergine;
+                    border-bottom: 10px solid $aubergine;   
+                }
+            } 
         }
-        a{
-            color:#000;
-            font-family: "Teachers", sans-serif;
-            font-weight: 500;
-            font-size: 22px;
-            margin-right: 30px;
-            padding-bottom: 26px;
-            transition: border-bottom 0.3s ease; 
-            &:hover{
-                color: $aubergine;
-                border-bottom: 10px solid $aubergine;   
+        .connect{
+            display: flex;
+            .fa-user{
+                margin-right: 10px;
             }
-        } 
+            a{
+                color: #000;
+            }
+        }
     }    
 }
 //class pour faire disparaitre le menu au scroll
