--- a/styles/pages/_versmetierideal.scss
+++ b/styles/pages/_versmetierideal.scss
@@ -68,3 +68,11 @@
         display: block;
     }
 }
+#result{
+    width: 95%;
+    height: 50%;
+    background-color: $beige;
+    text-align: center;
+    padding: 50px;
+    border-radius: 10px;
+}
