--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -2,38 +2,35 @@ header{
     width: 100vw;
     height: 100vh;
     margin: 70px auto -50px;
-    @media screen and (min-width: 1025px){
-        margin: 125px auto 0;
+    position: relative;
+    @media screen and (min-width: 1024px){
+        margin: 125px auto -75px;
     }
 }
 .connect{
     display: none;
-    @media screen and (min-width: 1025px){
-    display: flex;
-    position: fixed;
-    top: 0;
-    right: 7%;
-    z-index: 200;
-    padding: 10px 50px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-color: $aubergine;
-    font-size: 20px;
-    .fa-user{
-        margin-right: 10px;
-    }
-    a{
-        color: #fff;
-    }
-        
-    }
-    
-    
+    @media screen and (min-width: 1024px){
+        display: flex;
+        position: fixed;
+        top: 0;
+        right: 7%;
+        z-index: 200;
+        padding: 7px 50px 9px;
+        border-bottom-left-radius: 20px;
+        border-bottom-right-radius: 20px;
+        background-color: $aubergine;
+        font-size: 20px;
+        .fa-user{
+            margin-right: 10px;
+        }
+        a{
+            color: #fff;
+        }   
+    }  
 }
 //div beige avec logo PamG Digital
 .logoBox{
-    width: 100vw;
-    padding: 30px 30px 15px;
+    padding: 30px 30px 20px;
     background-color: $beige;
     text-align: center;
     img{
@@ -53,28 +50,32 @@ header{
     }
 }
 //div photo Pam sourire
-.backgroundpict{
-    background: url(../images/PamSmiling.JPG) center/cover;
-    width: 100vw;
-    height: 60vh;
-    position: absolute;
-    top: 135px;
-    left: 0;
-    z-index: -3;
-    &::after{
-        @include whitefilter_before(0.2);
-    }  
-    @media screen and (min-width: 1024px){
-        top: 255px; 
-    }
+.backgroundpictBox{
+    position: relative;
+    .backgroundpict{
+        background: url(../images/PamSmiling.JPG) center/cover;
+        width: 100vw;
+        height: 45vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -3;
+        &::after{
+            @include whitefilter_before(0.2);
+        }  
+        @media screen and (min-width: 1024px){
+            height: 55vh;  
+        }
+    } 
 }
+
 .beigeCircle{
     width: 400px;
     height: 400px;
     border-radius: 50%;
     background-color: rgb(250, 242, 221, 0.7);
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     translate: -50% 0 0;
     z-index: -2;
@@ -82,7 +83,7 @@ header{
         width: 450px;
         height: 450px;
         border-radius: 50%;
-        top: 30%;
+        top: 20%;
         left: 2%;
         translate: -2% 0 0;
         
@@ -91,7 +92,7 @@ header{
         width: 500px;
         height: 500px;
         border-radius: 50%;
-        top: 40%;
+        top: 27%;
         left: 6%;  
     }
 }
@@ -99,7 +100,7 @@ header{
     background-color: rgb(93, 18, 59, 0.6);
     border-radius: 50%;
     position: absolute;
-    top: 50%;
+    top: 40%;
     z-index: -1;
     display: none;
     @media screen and (min-width: 820px){
@@ -124,8 +125,8 @@ header{
     padding: 30px 10px;
     position: absolute;
     top: -3%;
-    left: 49%;
-    translate: -49% 0 0;
+    left: 50%;
+    translate: -50% 0 0;
     .slug{
         opacity: 0;
         transition: 0.5s ease-in-out;
@@ -159,62 +160,74 @@ header{
     width: 150px;
     rotate: -60deg;
     position: absolute;
-    top: 60%;
+    top: 50%;
     left: 2%;
     @media screen and (min-width: 820px){
         width: 250px;
-        top: 68%;
+        top: 58%;
         left: -1%;
         z-index: 1;
         rotate: -105deg;
     }   
     @media screen and (min-width: 1024px){
-        width: 250px;
+        top: 67%;
+        left: 11%;
+        rotate: -125deg;
+    }  
+    @media screen and (min-width: 1400px){
+        top: 70%;
+        left: 15%;
+        rotate: -145deg;
+         
+    } 
+    @media screen and (min-width: 1500px){
+        left: 7%; 
+    }
+    @media screen and (min-width: 1670px){
         width: 300px;
-        top: 83%;
-        left: 22%;
-        rotate: 180deg;
+        top: 69%;
+        left: 16%;
+        rotate: 200deg;
     }  
 }
 .textbeforebtn{
     text-align: center;
     width: 100px;
     position: absolute;
-    top: 75%;
+    top: 65%;
     left: 5%;
     rotate: -15deg;
     font-family: "Gochi Hand", cursive;
     @media screen and (min-width: 820px){
-        top: 82%;
+        top: 72%;
         left: 22%;
     }
     @media screen and (min-width: 1024px){
-        top: 92%;
-        left: 16%; 
+        top: 82%;
+        left: 13%; 
     }  
     @media screen and (min-width: 1400px){
-        top: 92%;
-        left: 23%; 
+        left: 13%; 
     } 
     @media screen and (min-width: 1500px){
-        top: 92%;
-        left: 25%; 
+        left: 16%; 
     } 
-    @media screen and (min-width: 1700px){
-        top: 92%;
-        left: 28%; 
+    @media screen and (min-width: 1670px){ 
+        left: 16%;
     } 
 }
+
 .headerbtn{
-    width: 95%;
+    width: 90%;
     height: 70px;
     position: absolute;
-    top: 90%;
+    top: 80%;
     left: 50%;
-    translate: -50% 0;
+    translate: -52% 0 0;
     @media screen and (min-width: 1024px){
-        bottom: 15px;
-        width: 30%;
+        width: 35%;
+        top: 75%;
+       
     }
 }
 
