--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -14,7 +14,7 @@
     .burgerMenu{
     @include absmiddle;
     z-index: 10;
-         @media screen and (min-width: 1050px){
+         @media screen and (min-width: 1025px){
             display: none;
         }
         .burgerBar{
@@ -47,7 +47,7 @@
     background-color: $beige;
     transform: translateY(-275%);
     transition: 0.5s ease-in-out;
-    @media screen and (min-width: 1050px){
+    @media screen and (min-width: 1024px){
         display: none;
     }
         nav{    
@@ -56,18 +56,41 @@
             flex-direction: column;
             text-align: center;
             position: absolute;
-            top: 20%;
+            top: 19%;
             left: 50%;
             translate: -50% 0 0;
             a{
                 color: $aubergine;
                 font-family: "DM Serif Display", serif;
-                font-size: 35px; 
-            } 
-            a:not(:last-child){
+                font-size: 26px; 
                 margin-bottom: 35px;
+            } 
+           
+        
+            hr{
+                width: 40px;
+                height: 1px;
+                background-color: #000;
+                border: none;
+                rotate: 90deg;
+            }
+            a:last-child{
+                margin-top: 100px;
+            }
+            .btnMenuDown{
+                margin: 30px auto 100px;
+                background-color: $aubergine;
+                width: 400px;
+                padding: 10px;
+                border-radius: 10px;
+                box-shadow: 0 3px rgb(39, 33, 33, 0.7);
+                a{
+                    color: $beige;
+                }
+            
             }
         }
+        
     }
     //class pour faire descendre le menuDown
     .menuDownActive{
@@ -104,10 +127,12 @@
             padding: 10px 30px;
             background-color: $beige;
             border-radius: 10px;
-            box-shadow: 2px 3px rgb(128, 128, 128, 0.5);
+            box-shadow: 2px 2px rgba(102, 102, 102, 0.5);
         }
     }    
 }
+
+
 //class pour faire disparaitre le menu au scroll
 .slideMenu{
     transform: translateY(-100%);
